@@ -2,6 +2,7 @@ package org.molgenis.emx2.io.tablestore;
 
 import java.io.*;
 import java.net.URI;
+import java.net.URLConnection;
 import java.nio.file.FileSystem;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
@@ -11,17 +12,17 @@ import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipFile;
+import org.molgenis.emx2.BinaryFileWrapper;
 import org.molgenis.emx2.MolgenisException;
 import org.molgenis.emx2.Row;
 import org.molgenis.emx2.io.readers.CsvTableReader;
 import org.molgenis.emx2.io.readers.CsvTableWriter;
 
-public class TableStoreForCsvInZipFile implements TableStore {
+public class TableStoreForCsvInZipFile implements TableAndFileStore {
   static final String CSV_EXTENSION = ".csv";
   static final String TSV_EXTENSION = ".tsv";
   private final Path zipFilePath;
-  private static final Character comma = ',';
-  private static final Character tab = '\t';
+  private static final Character COMMA = ',';
 
   public TableStoreForCsvInZipFile(Path zipFilePath) {
     this.zipFilePath = zipFilePath;
@@ -69,7 +70,7 @@ public class TableStoreForCsvInZipFile implements TableStore {
   public void writeTable(String name, List<String> columnNames, Iterable<Row> rows) {
     // skip if columnNames is empty (edge case of a table without columns yet defined, like
     // 'Version' table)
-    if (columnNames.size() == 0) {
+    if (columnNames.isEmpty()) {
       return;
     }
     if (!Files.exists(zipFilePath)) {
@@ -79,10 +80,10 @@ public class TableStoreForCsvInZipFile implements TableStore {
       Path pathInZipfile = zipfs.getPath(File.separator + name + CSV_EXTENSION);
       Writer writer = Files.newBufferedWriter(pathInZipfile);
       if (rows.iterator().hasNext()) {
-        CsvTableWriter.write(rows, writer, comma);
+        CsvTableWriter.write(rows, writer, COMMA);
       } else {
         // only header in case no rows provided
-        writer.write(columnNames.stream().collect(Collectors.joining("" + comma)));
+        writer.write(columnNames.stream().collect(Collectors.joining("" + COMMA)));
       }
       writer.close();
     } catch (IOException ioe) {
@@ -96,17 +97,18 @@ public class TableStoreForCsvInZipFile implements TableStore {
       ZipEntry entry = getEntry(zf, name);
       Reader reader = new BufferedReader(new InputStreamReader(zf.getInputStream(entry)));
       if (entry != null && entry.getName().endsWith(CSV_EXTENSION)) {
-        processor.process(CsvTableReader.read(reader).iterator());
+        processor.process(CsvTableReader.read(reader).iterator(), this);
       } else if (entry != null && entry.getName().endsWith(TSV_EXTENSION)) {
-        processor.process(CsvTableReader.read(reader).iterator());
+        processor.process(CsvTableReader.read(reader).iterator(), this);
       } else {
         throw new MolgenisException(
-            "Import failed: Table '"
-                + name
-                + "' has unsupported extension (should be .csv or .tsv)");
+            String.format(
+                "Import failed: Table '%s' has unsupported extension (should be .csv or .tsv)",
+                name));
       }
     } catch (IOException e) {
-      throw new MolgenisException("Import failed: Table '" + name + "' not found in file. ", e);
+      throw new MolgenisException(
+          String.format("Import failed: Table '%s' not found in file. ", name), e);
     }
   }
 
@@ -116,19 +118,18 @@ public class TableStoreForCsvInZipFile implements TableStore {
       ZipEntry entry = getEntry(zf, name);
       Reader reader = new BufferedReader(new InputStreamReader(zf.getInputStream(entry)));
       if (entry != null && entry.getName().endsWith(CSV_EXTENSION)) {
-        return StreamSupport.stream(CsvTableReader.read(reader).spliterator(), false)
-            .collect(Collectors.toList());
+        return StreamSupport.stream(CsvTableReader.read(reader).spliterator(), false).toList();
       } else if (entry != null && entry.getName().endsWith(TSV_EXTENSION)) {
-        return StreamSupport.stream(CsvTableReader.read(reader).spliterator(), false)
-            .collect(Collectors.toList());
+        return StreamSupport.stream(CsvTableReader.read(reader).spliterator(), false).toList();
       } else {
         throw new MolgenisException(
-            "Import failed: Table '"
-                + name
-                + "' has unsupported extension (should be .csv or .tsv)");
+            String.format(
+                "Import failed: Table '%s' has unsupported extension (should be .csv or .tsv)",
+                name));
       }
     } catch (Exception e) {
-      throw new MolgenisException("Import failed: Table '" + name + "' not found in file. ", e);
+      throw new MolgenisException(
+          String.format("Import failed: Table '%s'not found in file. ", name), e);
     }
   }
 
@@ -161,17 +162,27 @@ public class TableStoreForCsvInZipFile implements TableStore {
     return result;
   }
 
+  @Override
+  public BinaryFileWrapper getBinaryFileWrapper(String name) {
+    try (ZipFile zf = new ZipFile(zipFilePath.toFile())) {
+      ZipEntry entry = getEntry(zf, name);
+      if (entry != null) {
+        String contentType = URLConnection.guessContentTypeFromName(entry.getName());
+        InputStream contents = zf.getInputStream(entry);
+        return new BinaryFileWrapper(contentType, entry.getName(), contents.readAllBytes());
+      } else {
+        throw new MolgenisException("Import failed: file '" + name + "' not found in file.");
+      }
+    } catch (Exception e) {
+      throw new MolgenisException("Import failed: file '" + name + "' resulted in error: ", e);
+    }
+  }
+
   // magic function to allow file in subfolder
   private ZipEntry getEntry(ZipFile zf, String name) {
-    List<ZipEntry> result =
-        zf.stream()
-            .filter(
-                e ->
-                    e.getName().equals(name + CSV_EXTENSION)
-                        || e.getName().endsWith(File.separator + name + CSV_EXTENSION)
-                        || e.getName().equals(name + TSV_EXTENSION)
-                        || e.getName().endsWith(File.separator + name + TSV_EXTENSION))
-            .collect(Collectors.toList());
+    List<? extends ZipEntry> result =
+        // find all files that have name as prefix
+        zf.stream().filter(e -> new File(e.getName()).getName().startsWith(name + ".")).toList();
     if (result.size() > 1) {
       throw new MolgenisException(
           "Import failed, contains multiple files of name " + name + " in different subfolders");
